Avoid use of deprecated Class#newInstance
Deprecated in 9, replacement is to get no-arg constructor and call
that instead. Some additional exception-handling required (lack of
which was the reason newInstance is now deprecated).